Graphics and Arts

--- a/index.html
+++ b/index.html
@@ -7,12 +7,32 @@
     <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <div id="simple-loading">LOADING...</div>
     <div id="potrait-screen">
-      <div class="page" id="page1">
-        <div class="loadingText">Loading, please wait...</div>
-        <progress value="0" max="100" class="loading"></progress>
+      <div class="info-popup">
+        <div class="close">&times;</div>
+        <div class="the-information">
+          <div class="info-heading">Info</div>
+          <div id="property1" class="property">Game Developer:</div>
+          <div id="game-developer" class="value">Muhammad Amirul Haq</div>
+          <div id="property2" class="property">Email:</div>
+          <div id="email" class="value">Muhammadamirulhaq66@gmail.com</div>
+          <div id="property3" class="property">Github:</div>
+          <div id="github" class="value">https://github.com/muhamirulhaq</div>
+        </div>
       </div>
       <div class="page" id="page2">
+        <div class="my-info"><div class="italic-i"><i>i</i></div></div>
+        <div class="speaker-area">
+          <div id="speaker">
+            <div class="back-piece"></div>
+            <div class="volume-piece"></div>
+            <div class="line-muter"></div>
+            <div id="line1"></div>
+            <div id="line2"></div>
+            <div id="line3"></div>
+          </div>
+        </div>
         <div class="heading">
           <div class="center-area">
           <h1 id="math-dash">HIGHER TO JUMP</h1>
@@ -23,12 +43,113 @@
           </ul>
           </div>
         </div>
+        <div id="accessorise-area">
+          <div id="player-accessorise">
+            <div class="eyes-accessorise">
+              <div class="eye-accessorise-1">
+                <div id="eyeball-accessorise-1"></div>
+              </div>
+              <div class="eye-accessorise-2">
+                <div id="eyeball-accessorise-2"></div>
+              </div>
+            </div>
+            <div id="mouth-accessorise"></div>
+          </div>
+          <div id="player2-accessorise">
+            <div class="eyes-accessorise">
+              <div class="eye-accessorise-1">
+                <div id="eyeball2-accessorise-1"></div>
+              </div>
+              <div class="eye-accessorise-2">
+                <div id="eyeball2-accessorise-2"></div>
+              </div>
+            </div>
+            <div id="mouth2-accessorise"></div>
+          </div>
+          <div id="player3-accessorise">
+            <div class="eyes-accessorise">
+              <div class="eye-accessorise-1">
+                <div id="eyeball3-accessorise-1"></div>
+              </div>
+              <div class="eye-accessorise-2">
+                <div id="eyeball3-accessorise-2"></div>
+              </div>
+            </div>
+            <div id="mouth3-accessorise"></div>
+          </div>
+          <div id="player4-accessorise">
+            <div class="eyes-accessorise">
+              <div class="eye-accessorise-1">
+                <div id="eyeball4-accessorise-1"></div>
+              </div>
+              <div class="eye-accessorise-2">
+                <div id="eyeball4-accessorise-2"></div>
+              </div>
+            </div>
+            <div id="mouth4-accessorise"></div>
+          </div>
+          <div id="player5-accessorise">
+            <div class="eyes-accessorise">
+              <div class="eye-accessorise-1">
+                <div id="eyeball5-accessorise-1"></div>
+              </div>
+              <div class="eye-accessorise-2">
+                <div id="eyeball5-accessorise-2"></div>
+              </div>
+            </div>
+            <div id="mouth5-accessorise"></div>
+          </div>
+          <div id="player6-accessorise">
+            <div class="eyes-accessorise">
+              <div class="eye-accessorise-1">
+                <div id="eyeball6-accessorise-1"></div>
+              </div>
+              <div class="eye-accessorise-2">
+                <div id="eyeball6-accessorise-2"></div>
+              </div>
+            </div>
+            <div id="mouth6-accessorise"></div>
+          </div>
+          <div id="player7-accessorise">
+            <div class="eyes-accessorise">
+              <div class="eye-accessorise-1">
+                <div id="eyeball7-accessorise-1"></div>
+              </div>
+              <div class="eye-accessorise-2">
+                <div id="eyeball7-accessorise-2"></div>
+              </div>
+            </div>
+            <div id="mouth7-accessorise"></div>
+          </div>
+        </div>
         <div class="play">
           <p id="play-button">PLAY</p>
         </div>
       </div>
       <div class="page" id="page3">
         <div id="ground">
+          <div class="hotels">
+            <div class="hotel" id="hotel1"></div>
+            <div class="hotel" id="hotel2"></div>
+            <div class="hotel" id="hotel3"></div>
+            <div class="hotel" id="hotel4"></div>
+            <div class="hotel" id="hotel5"></div>
+            <div class="hotel" id="hotel6"></div>
+            <div class="hotel" id="hotel7"></div>
+            <div class="hotel" id="hotel8"></div>
+            <div class="hotel" id="hotel9"></div>
+            <div class="hotel" id="hotel10"></div>
+            <div class="hotel" id="hotel11"></div>
+            <div class="hotel" id="hotel12"></div>
+            <div class="hotel" id="hotel13"></div>
+            <div class="hotel" id="hotel14"></div>
+            <div class="hotel" id="hotel15"></div>
+            <div class="hotel" id="hotel16"></div>
+            <div class="hotel" id="hotel17"></div>
+            <div class="hotel" id="hotel18"></div>
+            <div class="hotel" id="hotel19"></div>
+            <div class="hotel" id="hotel20"></div>
+          </div>
           <p id="notice">Press the largest number to jump and start the game...</p>
           <div class="score-box">
             <b>Your Score</b><br>
@@ -41,6 +162,10 @@
           <p id="lose-notice">Press the largest number to start again!</p>
           <p id="back">Back to Menu</p>
           <div id="player">
+            <div class="eye">
+              <div class="eyeball"></div>
+            </div>
+            <div class="mouth"></div>
           </div>
           <div class="block">
           </div>
@@ -55,7 +180,8 @@
         </div>
       </div>
     </div>
-    <audio id="st1" src="assets/audio/A%20Typical%20Ride%20Out%20-%20Noir%20Et%20Blanc%20Vie.mp3" loop></audio>
+    <audio id="st1" src="assets/audio/Mosswood%20-%20Steve%20Adams.mp3" loop></audio>
+    <audio id="st2" src="assets/audio/Meeka%20-%20Steve%20Adams.mp3" loop></audio>
     <script src="assets/js/script.js"></script>
   </body>
 </html>
