New Update Fix the Bug of Audio Loading

--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
         </div>
       </div>
     </div>
-    <audio id="st1" src="assets/audio/Mosswood%20-%20Steve%20Adams.mp3" loop preload="auto"></audio>
-    <audio id="st2" src="assets/audio/Meeka%20-%20Steve%20Adams.mp3" loop preload="auto"></audio>
+    <audio id="st1" src="assets/audio/Mosswood%20-%20Steve%20Adams.mp3" loop></audio>
+    <audio id="st2" src="assets/audio/Meeka%20-%20Steve%20Adams.mp3" loop></audio>
     <script src="assets/js/script.js"></script>
   </body>
 </html>
