--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <title>Higher to Jump</title>
     <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
