--- a/index.html
+++ b/index.html
@@ -1,8 +1,29 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script type="text/javascript" src="https://wanted5games.com/js/game.js"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="assets/favicon/apple-touch-icon-57x57.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/favicon/apple-touch-icon-114x114.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/favicon/apple-touch-icon-72x72.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/favicon/apple-touch-icon-144x144.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="assets/favicon/apple-touch-icon-60x60.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="assets/favicon/apple-touch-icon-120x120.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="assets/favicon/apple-touch-icon-76x76.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="assets/favicon/apple-touch-icon-152x152.png" />
+    <link rel="icon" type="image/png" href="assets/favicon/favicon-196x196.png" sizes="196x196" />
+    <link rel="icon" type="image/png" href="assets/favicon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/png" href="assets/favicon/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="assets/favicon/favicon-16x16.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="assets/favicon/favicon-128.png" sizes="128x128" />
+    <meta name="application-name" content="&nbsp;"/>
+    <meta name="msapplication-TileColor" content="#FFFFFF" />
+    <meta name="msapplication-TileImage" content="assets/favicon/mstile-144x144.png" />
+    <meta name="msapplication-square70x70logo" content="assets/favicon/mstile-70x70.png" />
+    <meta name="msapplication-square150x150logo" content="assets/favicon/mstile-150x150.png" />
+    <meta name="msapplication-wide310x150logo" content="assets/favicon/mstile-310x150.png" />
+    <meta name="msapplication-square310x310logo" content="assets/favicon/mstile-310x310.png" />
     <title>Higher to Jump</title>
     <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
   </head>
@@ -22,6 +43,8 @@
         </div>
       </div>
       <div class="page" id="page2">
+        <div class="more-games">More Games</div>
+        <img src="" class="wanted5games-logo" width="22%">
         <div class="my-info"><div class="italic-i"><i>i</i></div></div>
         <div class="speaker-area">
           <div id="speaker">
@@ -183,5 +206,21 @@
     <audio id="st1" src="assets/audio/Mosswood%20-%20Steve%20Adams.mp3" loop preload="auto"></audio>
     <audio id="st2" src="assets/audio/Meeka%20-%20Steve%20Adams.mp3" loop preload="auto"></audio>
     <script src="assets/js/script.js"></script>
+    <script type="text/javascript">
+      CloudAPI.init({
+        'id': 1004,
+        'splash': false
+      });
+
+      CloudAPI.mute = function () {
+        mute();
+        if(isSuccessfullyMuted) return true;
+      };
+
+      CloudAPI.unmute = function () {
+        unmute();
+        if(isSuccessfullyUnmuted) return true;
+      };
+    </script>
   </body>
 </html>
